Source/WebCore/inspector/WebInjectedScriptHost.h
@@ -34,6 +34,7 @@ public:
     static Ref<WebInjectedScriptHost> create() { return adoptRef(*new WebInjectedScriptHost); }
 
     JSC::JSValue subtype(JSC::ExecState*, JSC::JSValue) override;
+    JSC::JSValue getInternalProperties(JSC::VM&, JSC::ExecState*, JSC::JSValue) override;
     bool isHTMLAllCollection(JSC::VM&, JSC::JSValue) override;
 };
 
